WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307221
`appearance: base-select` should not affect non-select elements
https://bugs.webkit.org/show_bug.cgi?id=307221
Summary
`appearance: base-select` should not affect non-select elements
Tim Nguyen (:ntim)
Reported
2026-02-06 23:10:49 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-06 23:10:55 PST
<
rdar://problem/169858852
>
Tim Nguyen (:ntim)
Comment 2
2026-02-06 23:14:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58103
EWS
Comment 3
2026-02-07 20:32:12 PST
Committed
307025@main
(8565b7c3d1c3): <
https://commits.webkit.org/307025@main
> Reviewed commits have been landed. Closing PR #58103 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug