`appearance: base-select` should not affect non-select elements https://bugs.webkit.org/show_bug.cgi?id=307221 rdar://169858852

Reviewed by Simon Fraser.

* LayoutTests/TestExpectations:
* LayoutTests/fast/forms/appearance-base/internal-auto-base-function-expected.html:
* LayoutTests/fast/forms/appearance-base/internal-auto-base-function.html:
* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustAppearanceForElement const):
* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::resolveInternalAutoBaseFunction):

Canonical link: https://commits.webkit.org/307025@main