Source/WebCore/rendering/RenderTheme.cpp
@@ -131,8 +131,14 @@ StyleAppearance RenderTheme::adjustAppearanceForElement(RenderStyle& style, cons
 
     auto appearance = style.usedAppearance();
     if (appearance == StyleAppearance::BaseSelect) {
-        style.setUsedAppearance(StyleAppearance::Base);
-        return StyleAppearance::Base;
+        if (is<HTMLSelectElement>(element)) [[likely]] {
+            style.setUsedAppearance(StyleAppearance::Base);
+            return StyleAppearance::Base;
+        }
+
+        // `appearance: base-select` behaves like `auto` on non-select elements.
+        style.setUsedAppearance(autoAppearance);
+        return autoAppearance;
     }
 
     if (appearance == autoAppearance)
